--- a/api/template/api.yaml
+++ b/api/template/api.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: webapi
-        image: webapi:dev
+        image: webapi:v1
         ports:
         - containerPort: 80
 ---
@@ -34,6 +34,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: webapi-ingress
+  annotations:
+    ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
   - http:
