--- a/api/template/redis.yaml
+++ b/api/template/redis.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: redis
-  replicas: 1 # 运行一个 Redis 实例
+  replicas: 1
   template:
     metadata:
       labels:
