--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Redis": {
-    "ConnectionString": "redis-service:6379", 
+    "ConnectionString": "host.docker.internal:6379", 
     "InstanceName": "Policy"
  },
   "AllowedHosts": "*",
@@ -28,8 +28,8 @@
         "Rules": [     
           {
             "Endpoint": "*",
-            "Period": "1m",
-            "Limit": 60
+            "Period": "5s",
+            "Limit": 5
           }
         ]
       }
